@@ -1,3 +1,8 @@
+2005-01-31  Werner Koch  <wk@g10code.com>
+
+	* cms-parser.c (_ksba_cms_parse_signed_data_part_2): Allow NDEF
+	encoding for the set of certificates.
+
 2005-01-21  Werner Koch  <wk@g10code.com>
 
 	* Makefile.am (ber_dump_SOURCES): Use per target flags to force
